# brain-in-the-fish

./: .env.example  .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README-CN.md  README-JP.md  README.md  SKILL.md  bench_run.sh  evaluation.ttl
.github/workflows/: ci.yml  docker.yml  release.yml
benches/: debate_rounds.rs  scaling.rs
case-studies/: 01-fabrication-detection.md  02-prompt-firewall.md
case-studies/data/: adversarial-injections.json  fabrication-test.json  impossible-injections.json  manipulation-cases.json
crates/bench-naive/: Cargo.toml
crates/bench-naive/src/: agent.rs  alignment.rs  argument_graph.rs  debate.rs  gate.rs  ingest.rs  lib.rs  llm.rs  moderation.rs  orchestrator.rs  rules.rs  scoring.rs  types.rs
crates/bench-tardygrada/: Cargo.toml  Makefile  bench.c  build.rs
crates/bench-tardygrada-pure/: Makefile  bench.c
crates/bench-tardygrada/src/: ffi.rs  lib.rs  orchestrator.rs  pipeline.rs  vm_agents.rs
crates/bench-tardygrada/tardygrada/: bench_wrapper.c
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: debate_rounds.rs  full_pipeline.rs  scaling.rs
crates/benchmarks/benches/fixtures/: mock_data.rs
crates/benchmarks/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: adaptive_extract.rs  alignment.rs  argument_graph.rs  batch.rs  belief_dynamics.rs  benchmark.rs  calibrate.rs  criteria.rs  extract.rs  firewall.rs  gate.rs  ingest.rs  lib.rs  llm.rs  memory.rs  moderation.rs  optimize.rs  philosophy.rs  predict.rs  research.rs  rules.rs  server.rs  shoal.rs  snn.rs  socket.rs  types.rs  validate.rs  verify.rs
crates/core/tests/: calibrate_snn_test.rs  debate_integration_test.rs  eds_integration_test.rs  gate_test.rs  llm_eds_benchmark_test.rs  ontology_test.rs  pipeline_test.rs  prediction_eds_benchmark_test.rs  prediction_eds_improved_test.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/mcp/tests/: integration_test.rs
data/: adversarial-essays.json  asap-1k.json  asap-set1-sample.json  asap-set1.json  asap-stratified-100-extractions.json  asap-stratified-100-full-sketch.json  asap-stratified-100-graph-scores.json  asap-stratified-100-merged-scores.json  asap-stratified-100.json  attack-ontology.ttl  bench_scores.json  cross-domain-clinical.json  cross-domain-policy.json  cross-domain-tender.json  ellipse-1k.json  ellipse-500.json  ellipse-sample.json  essay-eval-ontology.ttl  essays-30.json
docs/plans/: 2026-03-23-brain-in-the-fish-design.md  2026-04-05-tardygrada-benchmark-design.md  2026-04-05-tardygrada-benchmark-plan.md
examples/: benchmark-dataset.json  custom-rubric.yaml  ellipse-rubric.yaml
src/: agent.rs  alignment.rs  belief_dynamics.rs  benchmark.rs  criteria.rs  debate.rs  epistemology.rs  extract.rs  ingest.rs  lib.rs  llm.rs  main.rs  memory.rs  moderation.rs  orchestrator.rs  report.rs  scoring.rs  semantic.rs  server.rs  snn.rs  types.rs  validate.rs  visualize.rs
tests/: debate_integration_test.rs  ontology_test.rs  pipeline_test.rs
