[package]
name = "brain-in-the-fish"
version = "0.1.0"
edition = "2024"
description = "Universal document evaluation engine — a swarm of cognitively-modelled AI agents evaluate any document, with mental states as OWL ontology"
license = "MIT"
repository = "https://github.com/fabio-rovai/brain-in-the-fish"

[[bin]]
name = "brain-in-the-fish"
path = "src/main.rs"

[dependencies]
open-ontologies = { path = "../open-ontologies", features = ["embeddings"] }
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
pdf-extract = "0.8"
regex = "1"
schemars = "1"
serde_yaml = "0.9"
dirs = "6"
csv = "1"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
