[package]
name = "bench-naive"
version.workspace = true
edition.workspace = true

[dependencies]
open-ontologies = { path = "../../../open-ontologies", features = ["embeddings"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
pdf-extract = "0.8"
regex = "1"
regex-lite = "0.1"
urlencoding = "2"
schemars = "1"
serde_yaml = "0.9"
dirs = "6"
csv = "1"
