[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-naive = { path = "../bench-naive" }
bench-tardygrada = { path = "../bench-tardygrada" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "full_pipeline"
harness = false

[[bench]]
name = "debate_rounds"
harness = false

[[bench]]
name = "scaling"
harness = false
