[package]
name = "brain-in-the-fish"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal document evaluation engine — CLI binary"

[[bin]]
name = "brain-in-the-fish"
path = "src/main.rs"

[dependencies]
brain-in-the-fish-core = { path = "../core" }
# Path assumes open-ontologies is checked out alongside this repo (../../../open-ontologies).
# CI rewrites this path via sed to match its checkout layout (see .github/workflows/ci.yml).
open-ontologies = { path = "../../../open-ontologies", features = ["embeddings"] }
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
