[package]
name = "brain-in-the-fish-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal document evaluation engine — core library"

[dependencies]
# Path assumes open-ontologies is checked out alongside this repo (../../../open-ontologies).
# CI rewrites this path via sed to match its checkout layout (see .github/workflows/ci.yml).
open-ontologies = { path = "../../../open-ontologies", features = ["embeddings"] }
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
pdf-extract = "0.8"
regex = "1"
regex-lite = "0.1"
urlencoding = "2"
schemars = "1"
serde_yaml = "0.9"
dirs = "6"
csv = "1"
tempfile = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
